Fix misaligned thead to tbody in tables

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -439,7 +439,7 @@ a.bg-danger:hover {
 .wrapper {
     width:100%;
     height: 500px;
-    overflow:scroll;
+    overflow: auto;
     position: relative;
     /*border-bottom:1px solid #999;*/
 }
